--- a/emacs.org
+++ b/emacs.org
@@ -2623,6 +2623,15 @@ For more information, see ~man 5 hunspell~.
     :delight buffer-face-mode)
 #+END_SRC
 
+** goto-addr - Emphasize URIs
+#+BEGIN_SRC emacs-lisp
+  (use-package goto-addr
+    :hook ((prog-mode conf-mode) . goto-address-prog-mode)
+    :config
+    (setq goto-address-mail-face goto-address-url-face)
+    (setq goto-address-mail-mouse-face goto-address-url-mouse-face))
+#+END_SRC
+
 ** hl-line - Highlight current line
 #+BEGIN_SRC emacs-lisp
   (use-package hl-line
