--- a/emacs.org
+++ b/emacs.org
@@ -5998,8 +5998,8 @@ Configure elfeed afterwards.
 
     (defun koek-feed/enqueue (entries &optional next)
       "Enqueue ENTRIES in bongo.
-  When NEXT is truthy, enqueue after playing track, else, enqueue
-  after last track."
+  When optional NEXT is truthy, enqueue after playing track, else,
+  enqueue after last track."
       (with-temp-bongo-library-buffer
         (dolist (entry entries)
           (bongo-insert-uri (elfeed-entry-link entry)
@@ -6397,8 +6397,8 @@ Stavrou)]].
 
     (defun koek-bngo/enqueue (file-names &optional next)
       "Enqueue FILE-NAMES.
-  When NEXT is truthy, enqueue after playing track, else, enqueue
-  after last track."
+  When optional NEXT is truthy, enqueue after playing track, else,
+  enqueue after last track."
       (with-temp-bongo-library-buffer
         (dolist (file-name file-names)
           (bongo-insert-file file-name))
