[emacs] Tweak error message

--- a/emacs.org
+++ b/emacs.org
@@ -6120,7 +6120,7 @@ Gnus is a placeholder.
       "Stain document for reading under different light conditions."
       :lighter " Stain"
       (unless (derived-mode-p 'pdf-view-mode)
-        (user-error "Not a PDF buffer"))
+        (user-error "Not in a PDF buffer"))
       (if koek-pdf/stain-mode
           (progn
             (add-hook 'after-save-hook #'koek-pdf/stain nil 'local)
