--- a/emacs.org
+++ b/emacs.org
@@ -6371,6 +6371,9 @@ Stavrou)]].
      ("C-c k x" . bongo-stop))
     :hook (dired-mode . bongo-dired-library-mode)
     :preface
+    (eval-when-compile
+      (require 'bongo))
+
     (define-advice bongo-default-library-buffer
         (:override () koek-bngo/get-default-library-buffer)
       (dired-noselect bongo-default-directory))
