[emacs] Tweak comment

--- a/emacs.org
+++ b/emacs.org
@@ -6330,7 +6330,7 @@ Stavrou)]].
                               'maybe-display-playlist)))
 
     ;; Contrary to what its signature suggests,
-    ;; `bongo-dired-enqueue-lines' enqueues only current line
+    ;; `bongo-dired-enqueue-lines' only enqueues current line
     (defun koek-bngo/dired-enqueue-dwim (&optional arg)
       "Enqueue current line or marked lines.
   With `\\[universal-argument]' prefix argument ARG, enqueue after
