[emacs] Bind org-clone-subtree-with-time-shift in org-mode

--- a/emacs.org
+++ b/emacs.org
@@ -7258,6 +7258,7 @@ templates]].
     :mode ((rx ".org" string-end) . org-mode)
     :bind
     (:map org-mode-map
+     ("C-c o k" . org-clone-subtree-with-time-shift) ; [K]lone [sic]
      ("C-M-f" . org-forward-heading-same-level)
      ("C-M-b" . org-backward-heading-same-level)
      ("C-M-n" . org-next-visible-heading)
