[emacs] Bind org-cycle-list-bullet in org-mode

--- a/emacs.org
+++ b/emacs.org
@@ -7379,6 +7379,10 @@ templates]].
 
     (org-clock-load))
 
+  (use-package org-list
+    :bind
+    ("C-c o t" . org-cycle-list-bullet))  ; List [t]ype
+
   (use-package org-refile
     :defer t
     :config
