[emacs] Process file end before everything else

--- a/emacs.org
+++ b/emacs.org
@@ -7460,6 +7460,17 @@ It's part of tangling [[*yasnippet - Snippets][embedded snippets]].
              (remq 'recentf-track-opened-file write-file-functions)))
         (apply f args)))
 
+    (defun koek-org/process-file-end ()
+      "Process end of tangled file.
+  Code blocks end with empty line.  When `require-final-newline' is
+  nil, delete empty line at end of file."
+      (unless require-final-newline
+        (save-excursion
+          (goto-char (point-max))
+          (unless (bobp)
+            (delete-char -1)
+            (save-buffer)))))
+
     (defun koek-org/gen-autoloads ()
       "Generate autoloads for Emacs Lisp packages."
       (when (derived-mode-p 'emacs-lisp-mode)
@@ -7480,21 +7491,10 @@ It's part of tangling [[*yasnippet - Snippets][embedded snippets]].
       "Compile Emacs Lisp files."
       (when (derived-mode-p 'emacs-lisp-mode)
         (byte-recompile-file (buffer-file-name) nil 0)))
-
-    (defun koek-org/process-file-end ()
-      "Process end of tangled file.
-  Code blocks end with empty line.  When `require-final-newline' is
-  nil, delete empty line at end of file."
-      (unless require-final-newline
-        (save-excursion
-          (goto-char (point-max))
-          (unless (bobp)
-            (delete-char -1)
-            (save-buffer)))))
     :config
-    (add-hook 'org-babel-post-tangle-hook #'koek-org/process-file-end)
     (add-hook 'org-babel-post-tangle-hook #'koek-org/compile-emacs-lisp)
-    (add-hook 'org-babel-post-tangle-hook #'koek-org/gen-autoloads))
+    (add-hook 'org-babel-post-tangle-hook #'koek-org/gen-autoloads)
+    (add-hook 'org-babel-post-tangle-hook #'koek-org/process-file-end))
 
   (use-package ob-clojure
     :defer t
