[emacs] Simplify case pattern

--- a/emacs.org
+++ b/emacs.org
@@ -8254,7 +8254,7 @@ windows and continues in the mode line.
                                     koek-ml/checker-names)))
                (concat name " "))
             ,(pcase (koek-ml/get-flymake-state)
-               ((or `running `finished)
+               ((or 'running 'finished)
                 (let ((n-diags (koek-ml/get-flymake-n-diags)))
                   (mapconcat
                    (lambda (level)
