--- a/emacs.org
+++ b/emacs.org
@@ -2999,7 +2999,9 @@ produce noisy diffs.
       (let ((paths (parse-colon-path (getenv "CLASSPATH"))))
         (unless (member file-name paths)
           (setenv "CLASSPATH"
-                  (string-join (cons file-name paths) path-separator))))))
+                  (string-join (cons file-name paths) path-separator)))))
+
+    (push 'company-backends eglot-stay-out-of))
 #+END_SRC
 
 ** tree-sitter - Query parse tree
