[emacs] Simplify computing running flymake backends

--- a/emacs.org
+++ b/emacs.org
@@ -8118,9 +8118,7 @@ windows and continues in the mode line.
   checkers)."
       (let* ((enabled (flymake-running-backends))
              (finished (flymake-reporting-backends))
-             (running (seq-filter (lambda (checker)
-                                    (not (memq checker finished)))
-                                  enabled))
+             (running (seq-difference enabled finished))
              (disabled (flymake-disabled-backends)))
         (cond
          (running
