[emacs] Set default dark themes

--- a/emacs.org
+++ b/emacs.org
@@ -7867,7 +7867,7 @@ Define theme infrastructure.
   (define-advice enable-theme (:after (&rest _args) koek-thm/run-enable-hook)
     (run-hooks 'koek-thm/enable-hook))
 
-  (defvar koek-thm/dark-themes nil
+  (defvar koek-thm/dark-themes '(modus-vivendi)
     "List of theme symbols.
   Themes are dark themes.")
 
@@ -7961,7 +7961,6 @@ current theme.
     (setq modus-themes-org-blocks 'gray-background)
     :config
     (setq face-near-same-color-threshold 70000)
-    (push 'modus-vivendi koek-thm/dark-themes)
     (koek-mt/load 'vivendi))
 #+END_SRC
 
