[emacs] Allow variable pitch fonts

--- a/emacs.org
+++ b/emacs.org
@@ -7948,6 +7948,7 @@ current theme.
     (bind-key "C-c z t" #'koek-mt/toggle-variant)
 
     (setq modus-themes-success-deuteranopia t)
+    (setq modus-themes-mixed-fonts t)
     (setq modus-themes-bold-constructs t)
     (setq modus-themes-italic-constructs t)
     (setq modus-themes-region '(bg-only))
