[emacs] Expand docstring

--- a/emacs.org
+++ b/emacs.org
@@ -8455,7 +8455,8 @@ Define well known directories.
 
 #+BEGIN_SRC emacs-lisp
   (defun koek/get-user-dir (name)
-    "Return user directory NAME."
+    "Return user directory NAME.
+  NAME is a string, the name of the user directory."
     (when-let ((file-name (getenv name)))
       (file-name-as-directory file-name)))
 
