--- a/emacs.org
+++ b/emacs.org
@@ -8524,8 +8524,8 @@ Configure monitors and monitor layouts.
 #+END_SRC
 
 ** Agendas
-Org files in ~koek/documents-dir~, ~koek/calendars-dir~ and subdirectories
-of ~koek/projects-dir~, are agenda files. Configure agendas.
+Org files in ~koek/documents-dir~, ~koek/calendars-dir~ and child
+directories of ~koek/projects-dir~, are agenda files. Configure agendas.
 
 #+BEGIN_SRC emacs-lisp
   (use-package org
