[emacs] Tweak docstring

--- a/emacs.org
+++ b/emacs.org
@@ -8547,7 +8547,7 @@ directories of ~koek/projects-dir~, are agenda files. Configure agendas.
                   (file-name-as-directory (car spec))))))
 
     (defun koek/get-agenda-dirs ()
-      "Return directories storing agenda files."
+      "Return agenda directories."
       (append (list koek/documents-dir koek/calendars-dir)
               (koek/get-child-dirs koek/projects-dir)))
 
