--- a/emacs.org
+++ b/emacs.org
@@ -2681,8 +2681,14 @@ For more information, see ~man 5 hunspell~.
       git-rebase-mode occur-mode grep-mode proced-mode mu4e-headers-mode
       elfeed-search-mode bongo-playlist-mode)
      . lin-mode)
+    :preface
+    (defun koek-lin/reconfigure-for-wdired ()
+      "Reconfigure lin for use with wdired.
+  When wdired is enabled, disable lin, else, enable lin."
+      (lin-mode (if wdired-mode 0 1)))
     :config
-    (setq lin-face 'lin-blue-override-fg))
+    (setq lin-face 'lin-blue-override-fg)
+    (add-hook 'wdired-mode-hook #'koek-lin/reconfigure-for-wdired))
 #+END_SRC
 
 * Constructs
