[emacs] Move org-refile-targets to correct location

--- a/emacs.org
+++ b/emacs.org
@@ -7507,6 +7507,9 @@ templates]].
   (use-package org-refile
     :defer t
     :config
+    (setq org-refile-targets
+          '((nil . (:maxlevel . 3))       ; Current
+            (org-agenda-files . (:maxlevel . 3))))
     (setq org-outline-path-complete-in-steps nil)
     (setq org-refile-use-outline-path 'buffer-name))
 
@@ -8632,10 +8635,7 @@ directories of ~koek/projects-dir~, are agenda files. Configure agendas.
         (:before (&rest _args) koek/update-agenda-files)
       (setq org-agenda-files (koek/get-agenda-files)))
     :config
-    (setq org-directory koek/documents-dir)
-    (setq org-refile-targets
-          '((nil . (:maxlevel . 3))       ; Current
-            (org-agenda-files . (:maxlevel . 3)))))
+    (setq org-directory koek/documents-dir))
 #+END_SRC
 
 *** Holidays
