--- a/dotfiles.org
+++ b/dotfiles.org
@@ -354,7 +354,7 @@ To apply configuration, run:
   chromium.desktop
   firefox.desktop
   io.github.qtox.qTox.desktop
-  jami-gnome.desktop
+  jami-qt.desktop
   org.gnome.Epiphany.desktop
   teams.desktop
 #+END_SRC
